--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "koa": "2.0.0",
         "koa-bodyparser": "3.2.0",
         "koa-router": "7.0.0",
+        "marked": "^0.3.6",
         "mime": "1.3.4",
         "mongoose": "^4.11.7",
         "mz": "2.4.0",
